WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270388
[IFC][Partial layout] Inserting whitespace may not trigger line break at the correct position
https://bugs.webkit.org/show_bug.cgi?id=270388
Summary
[IFC][Partial layout] Inserting whitespace may not trigger line break at the ...
alan
Reported
2024-03-01 17:22:52 PST
<
rdar://120751482
>
Attachments
Patch
(3.98 KB, patch)
2024-03-01 17:24 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(30.03 KB, patch)
2024-03-01 21:37 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(9.44 KB, patch)
2024-03-02 07:20 PST
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(9.44 KB, patch)
2024-03-03 13:24 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-03-01 17:24:41 PST
Created
attachment 470130
[details]
Patch
alan
Comment 2
2024-03-01 21:37:48 PST
Created
attachment 470133
[details]
Patch
alan
Comment 3
2024-03-02 07:20:42 PST
Created
attachment 470136
[details]
Patch
alan
Comment 4
2024-03-03 13:24:11 PST
Created
attachment 470154
[details]
[fast-cq]Patch
EWS
Comment 5
2024-03-03 14:59:18 PST
Committed
275611@main
(d461338cbd32): <
https://commits.webkit.org/275611@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 470154
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug